# dependency-inversion

./: .gitignore  README.md
dependency-inversion-python/: pyproject.toml
dependency-inversion-python/src/: hello.py
dependency-inversion-python/tests/: test_hello.py
typescript/: package-lock.json  package.json
typescript/src/: main.ts
typescript/tests/: main.test.ts
