[tool.poetry]
name = "dependency-inversion-python"
version = "0.1.0"
description = ""
authors = ["Oscar Andres Ochoa Villegas <ochoscar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
